fixed 2 scrollbar bug

--- a/webapp/client/styles/style.css
+++ b/webapp/client/styles/style.css
@@ -63,6 +63,7 @@ body {
 
 .main-content {
     padding-top: 56px;
+    overflow: hidden;
 }
 
 .time-container {
